examples/test/testpolicy15235.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15235
  namespace: namespace6
spec:
  podSelector:
    matchLabels:
      key2: value6
      key33: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value1
          key41: value28
          key14: value28
      podSelector:
        matchLabels:
          key38: value43
